fix overflow bug on workshop card

--- a/src/styles/Workshop.module.scss
+++ b/src/styles/Workshop.module.scss
@@ -40,11 +40,13 @@
       flex-direction: row-reverse;
       justify-content: space-between;
       align-items: center;
+      height: 100%;
       .CardContent {
         font-size: 1.1vmax;
         font-weight: 600;
         height: 50%;
         width: 26vmax;
+        overflow: auto;
       }
       .CardSpeaker {
         display: flex;
